--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "yargs": "^15.1.0"
   },
   "devDependencies": {
+    "aws-sdk": "^2.634.0",
     "@types/aws4": "^1.5.1",
     "@types/node": "^13.7.7",
     "@types/yargs": "^15.0.4",
